implemented new dropdown to select between US and HK stocks

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,7 +13,7 @@
         <meta name="theme-color" content="#000000" />
         <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="Identifying Consecutive Gainers or Losers Among the Top 1000 US & HK Stocks"
         />
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/wolf.png" />
         <!--
